--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@ width: 1200px;
 
 
 background-color: #ffffff;
-background-image: url("../img/bg.jpg");
 background-position: top center;
 background-repeat: no-repeat;
 }
@@ -19,6 +18,11 @@ background-repeat: no-repeat;
 a {
 	text-decoration: none;
 }
+main {
+	background-image: url("../img/bg.jpg");
+	background-repeat: no-repeat;
+}
+
 .navigation-list {
 list-style-type: none;
 background-color: #ffffff;
@@ -39,7 +43,7 @@ background-color: #ffffff;
 width: 100%;
 height:	216px;
 }
-.description-section h2 {
+.description-section h1 {
 font-size: 21px;
 font-weight: bold;
 text-align: center;
@@ -60,14 +64,67 @@ font-size: 14px;
 text-align: center;	
 }
 
-
-.item-hotels {
-	background-color: #ffffff;
-	width: 100%;
-	height: 540px;
+.desc-div {
+background-color: #ffffff;
+width: 100%;
+height:	540px;
 }
-.item-hotels h2 {
-	font-size: 21px;
-	font-weight: bold;
-	color: #000000;
+
+li h2 {
+font-size: 21px;
+font-weight: bold;
+color: #000000;
+}
+.contacts-list li {
+background-image: url("../img/blue-square.png");
+height: 56px;
+width: 48px;
+}
+
+.list-hotel-description p{
+font-size: 14px;
+color: #ffffff;	
+}
+.list-hotel-description .link-more{
+font-size: 14px;
+color: #ffffff;
+font-weight: bold;
+}
+
+.list-hotel-description .link-more {
+background-color: #81b3d2;
+width: 110px;
+height: 27px;	
+}
+
+
+.list-hotel-description .link-book {
+font-size: 14px;
+color: #ffffff;
+font-weight: bold;
+}
+
+.list-hotel-description .link-book {
+background-color: #766357;
+width: 142px;
+height: 27px;
+}
+
+p.hashtag{
+font-size: 21px;
+color: #000000;
+font-weight: bold;
+text-decoration: underline;
+}
+p.price {
+font-size: 14px;
+color: #000000;	
+}
+span.rating, .link-signature {
+font-size: 14px;
+color: #000000;	
+}
+
+.contacts-list li {
+list-style-type: none;
 }
