--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
-margin: 0;
-padding: 0;
+margin: 0px;
+padding: 0px;
 font-family: 'PT Sans', sans-serif;
 font-size: 14px;
 line-height: 14px;
@@ -8,40 +8,63 @@ font-weight: 400;
 color: #000000;
 text-transform: uppercase;
 width: 1200px;
-
-
 background-color: #ffffff;
-background-position: top center;
-background-repeat: no-repeat;
+
 }
 
 a {
-	text-decoration: none;
+text-decoration: none;
 }
-main {
-	background-image: url("../img/bg.jpg");
-	background-repeat: no-repeat;
+
+.main-header{
+margin: 0;
+padding: 0;	
 }
+
+.navigation {
+min-height: 56px;
+background-color: #ffffff;	
+}
+
+.logo {
+margin: 0;
+display: flex;
+justify-content: center;
+
+}
+
+.navigation-wrapper {
+background-color: #ffffff;
+min-height: 56px;
+width: 100%;
+}
+
 
 .navigation-list {
+margin: 25px;
+padding: 25 px;
+display: flex;
+justify-content: space-between;
 list-style-type: none;
-background-color: #ffffff;
-height: 56px;
-width: 100%;
-
+display: flex;
+flex-direction: row;
 }
 
-.navigation-list li a {
-font-size: 14px;
-color: #000000;
-font-weight: bold;		
+.navigation-list a{
+font-weight: bold;
+color: #000000;	
+}
+
+.section-content {
+background-image: url("../img/bg.jpg");
+background-repeat: no-repeat;	
 }
 
 
 .description-section {
 background-color: #ffffff;
 width: 100%;
-height:	216px;
+min-height:	216px;
 }
 .description-section h1 {
 font-size: 21px;
@@ -49,7 +72,6 @@ font-weight: bold;
 text-align: center;
 }
 .description-section p{
-font-size: 14px;
 text-align: center;	
 }
 
@@ -60,33 +82,35 @@ font-weight: bold;
 }
 
 .desc-div p {
-font-size: 14px;
 text-align: center;	
 }
 
 .desc-div {
 background-color: #ffffff;
 width: 100%;
-height:	540px;
+min-height:	540px;
 }
 
-li h2 {
+.title-name {
 font-size: 21px;
 font-weight: bold;
 color: #000000;
 }
+
+a .title-name {
+list-style-type: none;	
+}
+
 .contacts-list li {
-background-image: url("../img/blue-square.png");
-height: 56px;
+background-color: #81b3d2;
+min-height: 56px;
 width: 48px;
 }
 
 .list-hotel-description p{
-font-size: 14px;
 color: #ffffff;	
 }
 .list-hotel-description .link-more{
-font-size: 14px;
 color: #ffffff;
 font-weight: bold;
 }
@@ -94,12 +118,11 @@ font-weight: bold;
 .list-hotel-description .link-more {
 background-color: #81b3d2;
 width: 110px;
-height: 27px;	
+min-height: 27px;	
 }
 
 
 .list-hotel-description .link-book {
-font-size: 14px;
 color: #ffffff;
 font-weight: bold;
 }
@@ -107,21 +130,19 @@ font-weight: bold;
 .list-hotel-description .link-book {
 background-color: #766357;
 width: 142px;
-height: 27px;
+min-height: 27px;
 }
 
-p.hashtag{
+.hashtag{
 font-size: 21px;
 color: #000000;
 font-weight: bold;
 text-decoration: underline;
 }
-p.price {
-font-size: 14px;
+.price {
 color: #000000;	
 }
 span.rating, .link-signature {
-font-size: 14px;
 color: #000000;	
 }
 
