--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,13 @@
 body {
-margin: 0px;
-padding: 0px;
+margin: 0;
+padding: 0;
 font-family: 'PT Sans', sans-serif;
 font-size: 14px;
 line-height: 14px;
-font-weight: 400; 
+font-weight: 400;
 color: #000000;
 text-transform: uppercase;
-width: 1200px;
-background-color: #ffffff;
+background-color: #ececec;
 
 }
 
@@ -17,20 +16,29 @@ text-decoration: none;
 }
 
 .main-header{
-margin: 0;
-padding: 0;	
+padding: 0;
+  background-color: #ffffff;
 }
 
+.container {
+  margin: 0 auto;
+  width: 1200px;
+}
+
+.main-background {
+  background-color: #ffffff;
+}
 .navigation {
 min-height: 56px;
-background-color: #ffffff;	
 }
 
 .logo {
-margin: 0;
-display: flex;
-justify-content: center;
-
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  z-index: 1;
 }
 
 .navigation-wrapper {
@@ -41,74 +49,103 @@ width: 100%;
 
 
 .navigation-list {
-margin: 25px;
-padding: 25 px;
+  margin: 0;
+padding: 25px;
 display: flex;
 justify-content: space-between;
 list-style-type: none;
-display: flex;
-flex-direction: row;
 }
 
 .navigation-list a{
 font-weight: bold;
-color: #000000;	
+color: #000000;
 }
 
 .section-content {
 background-image: url("../img/bg.jpg");
-background-repeat: no-repeat;	
+background-repeat: no-repeat;
+  height: 505px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
 }
 
+.img-polygon{
+  position: absolute;
+  bottom: -1px;
+  left: -1px;
+  right: 0;
+
+}
 
 .description-section {
 background-color: #ffffff;
-width: 100%;
-min-height:	216px;
+width: 490px;
+min-height: 216px;
+  margin: 0 auto;
+  padding-top: 64px;
+
+
 }
-.description-section h1 {
-font-size: 21px;
+
+h1 {
+font-size: 1rem;
 font-weight: bold;
-text-align: center;
+  line-height: 120%;
+  text-align: center;
+  margin: 0 25px;
+  margin-bottom: 40px;
 }
 .description-section p{
-text-align: center;	
+
+
 }
 
 .desc-div h2 {
-font-size: 30px;
+font-size: 1.5rem;
 text-align: center;
 font-weight: bold;
+  margin: 58px;
+  margin-bottom: 38px;
 }
 
 .desc-div p {
-text-align: center;	
+text-align: center;
+  font-size: .7rem;
+  line-height: 120%;
 }
 
 .desc-div {
-background-color: #ffffff;
-width: 100%;
-min-height:	540px;
+width: 420px;
+min-height: 540px;
+  margin: 0 auto;
 }
 
 .title-name {
-font-size: 21px;
+font-size: 1.5rem;
 font-weight: bold;
 color: #000000;
 }
 
 a .title-name {
-list-style-type: none;	
+list-style-type: none;
 }
 
 .contacts-list li {
 background-color: #81b3d2;
 min-height: 56px;
 width: 48px;
+  margin: 0 3px;
 }
 
+.list-hotel-description{
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
 .list-hotel-description p{
-color: #ffffff;	
+color: #ffffff;
 }
 .list-hotel-description .link-more{
 color: #ffffff;
@@ -118,7 +155,7 @@ font-weight: bold;
 .list-hotel-description .link-more {
 background-color: #81b3d2;
 width: 110px;
-min-height: 27px;	
+min-height: 27px;
 }
 
 
@@ -133,19 +170,59 @@ width: 142px;
 min-height: 27px;
 }
 
+.footer {
+  background-color: #ffffff;
+  height: 120px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
 .hashtag{
-font-size: 21px;
+font-size: 1.5rem;
 color: #000000;
 font-weight: bold;
 text-decoration: underline;
+  margin: 0;
 }
 .price {
-color: #000000;	
+color: #000000;
 }
-span.rating, .link-signature {
-color: #000000;	
+.rating, .link-signature {
+color: #000000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.link-signature img {
+  margin: 0;
+  margin-left: 10px;
 }
 
-.contacts-list li {
+
+.contacts-list li{
 list-style-type: none;
+}
+.contacts-list {
+  display: flex;
+}
+.link-icn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.li-item {
+  position: relative;
+  border-bottom: 1px solid #ececec;
+  padding: 30px 0;
+}
+
+.hotel-img {
+  position: absolute;
+  margin-left: 70px;
+}
+.hotel-info{
+  margin-left: 240px;
 }
