--- a/css/style.css
+++ b/css/style.css
@@ -97,10 +97,6 @@ font-weight: bold;
   margin: 0 25px;
   margin-bottom: 40px;
 }
-.description-section p{
-
-
-}
 
 .desc-div h2 {
 font-size: 1.5rem;
@@ -136,7 +132,7 @@ list-style-type: none;
 background-color: #81b3d2;
 min-height: 56px;
 width: 48px;
-  margin: 0 3px;
+margin: 0 3px;
 }
 
 .list-hotel-description{
@@ -144,30 +140,31 @@ width: 48px;
   padding: 0;
   list-style-type: none;
 }
-.list-hotel-description p{
-color: #ffffff;
-}
-.list-hotel-description .link-more{
+
+.link-more {
 color: #ffffff;
 font-weight: bold;
+padding: 8px 14px;
+
 }
 
-.list-hotel-description .link-more {
+.link-more {
 background-color: #81b3d2;
 width: 110px;
-min-height: 27px;
+height: 30px;
 }
 
 
-.list-hotel-description .link-book {
+.link-book {
 color: #ffffff;
 font-weight: bold;
+padding: 8px 14px;
 }
 
-.list-hotel-description .link-book {
+.link-book {
 background-color: #766357;
 width: 142px;
-min-height: 27px;
+height: 27px;
 }
 
 .footer {
@@ -184,9 +181,8 @@ font-weight: bold;
 text-decoration: underline;
   margin: 0;
 }
-.price {
-color: #000000;
-}
+
+
 .rating, .link-signature {
 color: #000000;
   display: flex;
@@ -225,4 +221,8 @@ list-style-type: none;
 }
 .hotel-info{
   margin-left: 240px;
+}
+.rating {
+position: absolute;
+right: 80px;
 }
