--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,6 @@ a .title-name {
   font-size: 1.5rem;
   color: #000000;
   font-weight: bold;
-  text-decoration: underline;
   margin: 0;
 }
 
@@ -233,13 +232,109 @@ a .title-name {
 
 .search {
   display: flex;
-  border: 1px solid red;
   flex-direction: column;
+  align-items: center;
+  width: 568px;
+    margin: 0 auto;
+	box-shadow:0 4px 5px 0 rgba(0,0,0,0.14), 0 1px 10px 0 rgba(0,0,0,0.12), 0 2px 4px -1px rgba(0,0,0,0.3);
+}
+
+
+.title-search  {
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: bold;
+  background-color: #766357; 
+text-align: center;  
+padding-top: 35px;
+padding-bottom: 37px;
+width: 100%;
+margin: 0;
+}  
+
+.form  {
+  margin-top: 0;
+  width: 569px;
+  min-height: 396px;
+}
+
+.group-of-forms {
+  display: flex;
+  flex-direction: column;
+  padding: 55px;
+}
+
+.arrival-date {
+  font-weight: bold;
+  display: flex;
   align-items: center;
 }
 
-.search h2 {
-  background-color: #766357;
-  color: #ffffff;
-  font-size: 21px;
+.input-date{
+	border: none;
+    background-color: #f2f2f2;
+    height: 38px;
+    font-weight: bold;
+    padding-left: 13px;
+	background-image: url(../img/calendar.svg);
+	background-repeat: no-repeat;
+	background-position: center right 3px;
+	padding-right: 30px;
+	flex-grow: 1;
 }
+
+
+
+.date-of-departure {
+  font-weight: bold;
+  padding-top: 55px;
+  display: flex;
+  align-items: center;
+}
+
+.label-date {
+	width: 115px;
+}
+
+.adults{
+  font-weight: bold;
+  padding-top: 55px;
+  padding-right: 55px;
+}
+
+.children {
+  font-weight: bold;
+  padding-top: 55px;
+}
+
+.adults-children {
+  display: flex;
+  justify-content: space-between;
+}
+
+
+.button-type-submit {
+	padding-top: 69px;
+	font-size: 15px;
+	font-weight: bold;
+}
+
+.adults, .children {
+	display: flex;
+	flex-grow: 1;
+	align-items: center;
+}
+
+.quantity-counter {
+	display: flex;
+	background-color: #f2f2f2;
+	height: 38px;
+    font-weight: bold;
+    padding-left: 13px;
+}
+
+.quantity-counter button, .quantity-counter input {
+	width: 38px;
+	border: none;
+    background: none;
+} 
