--- a/css/style.css
+++ b/css/style.css
@@ -183,10 +183,6 @@ a {
   align-items: center;
 }
 
-.link-signature img {
-  margin: 0;
-  margin-left: 10px;
-}
 
 .contacts-list li {
   list-style-type: none;
@@ -265,9 +261,9 @@ a {
 }
 
 .input-date {
-  border: none;
   background-color: #f2f2f2;
-  height: 38px;
+  height: 34px;
+  font: inherit;
   font-weight: bold;
   text-transform: uppercase;
   font-family: 'PT Sans', sans-serif;
@@ -277,6 +273,7 @@ a {
   background-position: center right 3px;
   padding-right: 30px;
   flex-grow: 1;
+  border: 2px solid transparent;
 }
 
 
@@ -340,8 +337,9 @@ a {
 .quantity-counter button, .quantity-counter input {
   width: 38px;
   border: none;
-  background: none;
   font-weight: bold;
+  background-color: #f2f2f2;
+  outline: none;
 }
 
 .quantity-counter input {
@@ -427,6 +425,78 @@ a .title-name:active {
 }
 
 
-.img-svg:active {
+.link-icn:active .img-svg {
   opacity: .3;
+}
+
+
+.plus {
+	background-image: url(../img/plus.png);
+	background-repeat: no-repeat;
+	width: 38px;
+	height: 38px;
+	background-color: none;
+	background-position: center, center;
+	outline: none;
+}
+
+.minus {
+	background-image: url(../img/minus.png);
+	background-repeat: no-repeat;
+	width: 38px;
+	height: 38px;
+	background-color: transparent;
+	background-position: center, center;
+	outline: none;
+}
+
+.plus:hover {
+background-image: url(../img/black-plus.png);	
+}
+
+.plus:active {
+background-image: url(../img/blue-plus.png);
+}
+
+.minus:hover {
+background-image: url(../img/black-minus.png);	
+}
+
+.minus:active {
+background-image: url(../img/blue-minus.png);	
+
+}
+
+.logo-color {
+background-image: url(../img/logo-htmlacademy.svg);
+width: 100px; 
+height: 90px;
+background-repeat: no-repeat;
+  margin-top: 50px;
+  margin-left: 10px;
+}
+
+.logo-color:hover {
+    color: red;
+    fill: red;
+};
+    
+}
+
+
+.logo-color:active {
+ color: #bdbbbc;
+ 
+}
+
+
+
+
+
+.input-date:hover {
+	background-image: url(../img/black-calendar.png);
+}
+
+.input-date:active {
+	background-image: url(../img/blue-calendar.png);
 }
