--- a/css/style.css
+++ b/css/style.css
@@ -808,6 +808,7 @@ a .title-name:active {
 }
 
 
+
 .infrastructure ul {
   list-style-type: none;
 }
@@ -861,4 +862,40 @@ a .title-name:active {
 
 .check-input:checked:disabled + .check-box {
 	background-image: url(../img/checkbox-on-disabled.svg);
+}
+
+.slider {
+  position: relative;
+  padding: 20px 0;
+  width: 100%;
+
+}
+.slider-background {
+  position: relative;
+  background-color: rgba(255, 255, 255, .3);
+  height: 2px;
+  width: 100%;
+}
+
+.slider-background-active {
+position: absolute;
+height: 100%;
+width: 60%;
+z-index: 1;
+left: 0;
+top: 0;
+background-color: #fff;
+}
+
+.slider-button {
+  position: absolute;
+  width: 20px;
+  height: 22px;
+  background-image: url(../img/filter-button.svg);
+  z-index: 2;
+  top: -9px;
+}
+
+.slider-button-right {
+  left: 60%;
 }
